# csc496

./: CMakeLists.txt  README.md
include/: base_controller.h  common.h  context.h  ik.h  nullspace_control.h
include/teleop/: commons.h  examples_common.h  follower.h  leader.h  logger.h  messages.h  msqueue.h  network_client.h  network_server.h
runners/: gravity_compensation.cpp  impedance.cpp  medcvr_point_collection.cpp  nullspace_control.cpp
runners/extra/: franka_master_client.cpp  franka_slave_server.cpp
runners/teleop/: follower_franka.cpp  leader_franka.cpp
src/: common.cpp  ik.cpp
src/teleop/: follower copy.cpp  follower.cpp  leader.cpp  network_client.cpp  network_server.cpp
